I have a weird spacing issue. CSS is messed up(?)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,3 +703,7 @@ small {
 	margin-top: 0;
 	padding-top: 64px;
 }
+
+.start-spacer {
+	height: 64px;
+}
